--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
 
         <ul class="site-contacts">
           <li class="item">
-            <a class="site-link" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
+            <a class="site-link" href="mailto:info@devstudio.com">
+              info@devstudio.com</a
             >
           </li>
 
