--- a/index.html
+++ b/index.html
@@ -71,6 +71,9 @@
         <div class="container subtitle">
           <ul class="category">
             <li class="item">
+              <svg class="item-icon">
+                <use href="./images/symbol-defs-sprite.svg#icon-antenna"></use>
+              </svg>
               <h3 class="section-title">увага до деталей</h3>
               <p class="text">
                 Ідейні міркування, і навіть початок повсякденної роботи з
@@ -156,6 +159,49 @@
               />
               <h3 class="hero-name">Ігор Дем'яненко</h3>
               <p class="hero-text">Product Designer</p>
+              <div class="socials">
+                <ul class="socials-box">
+                  <li class="socials-item">
+                    <a class="socials-link" href="#">
+                      <svg class="socials-icon instagram">
+                        <use
+                          href="./images/symbol-defs-sprite.svg#icon-instagram"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+
+                  <li class="socials-item">
+                    <a class="socials-link" href="#">
+                      <svg class="socials-icon instagram">
+                        <use
+                          href="./images/symbol-defs-sprite.svg#icon-twitter"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+
+                  <li class="socials-item">
+                    <a class="socials-link" href="#">
+                      <svg class="socials-icon instagram">
+                        <use
+                          href="./images/symbol-defs-sprite.svg#icon-facebook"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+
+                  <li class="socials-item">
+                    <a class="socials-link" href="#">
+                      <svg class="socials-icon instagram">
+                        <use
+                          href="./images/symbol-defs-sprite.svg#icon-linkedin"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
+              </div>
             </li>
 
             <li class="hero-meta">
@@ -168,6 +214,46 @@
               />
               <h3 class="hero-name">Ольга Рєпіна</h3>
               <p class="hero-text">Frontend Developer</p>
+              <div>
+                <ul class="socials">
+                  <li class="socials-item">
+                    <a class="socials-link" href="#">
+                      <svg class="socials-icon instagram">
+                        <use
+                          href="./images/symbol-defs-sprite.svg#icon-instagram"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="socials-item">
+                    <a class="socials-link" href="#">
+                      <svg class="socials-icon instagram">
+                        <use
+                          href="./images/symbol-defs-sprite.svg#icon-twitter"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="socials-item">
+                    <a class="socials-link" href="#">
+                      <svg class="socials-icon instagram">
+                        <use
+                          href="./images/symbol-defs-sprite.svg#icon-facebook"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="socials-item">
+                    <a class="socials-link" href="#">
+                      <svg class="socials-icon instagram">
+                        <use
+                          href="./images/symbol-defs-sprite.svg#icon-linkedin"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
+              </div>
             </li>
 
             <li class="hero-meta">
@@ -180,6 +266,46 @@
               />
               <h3 class="hero-name">Микола Тарасов</h3>
               <p class="hero-text">Marketing</p>
+              <div>
+                <ul class="socials">
+                  <li class="socials-item">
+                    <a class="socials-link" href="#">
+                      <svg class="socials-icon instagram">
+                        <use
+                          href="./images/symbol-defs-sprite.svg#icon-instagram"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="socials-item">
+                    <a class="socials-link" href="#">
+                      <svg class="socials-icon instagram">
+                        <use
+                          href="./images/symbol-defs-sprite.svg#icon-twitter"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="socials-item">
+                    <a class="socials-link" href="#">
+                      <svg class="socials-icon instagram">
+                        <use
+                          href="./images/symbol-defs-sprite.svg#icon-facebook"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="socials-item">
+                    <a class="socials-link" href="#">
+                      <svg class="socials-icon instagram">
+                        <use
+                          href="./images/symbol-defs-sprite.svg#icon-linkedin"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
+              </div>
             </li>
 
             <li class="hero-meta">
@@ -192,9 +318,105 @@
               />
               <h3 class="hero-name">Михайло Єрмаков</h3>
               <p class="hero-text">UI Designer</p>
+              <div>
+                <ul class="socials">
+                  <li class="socials-item">
+                    <a class="socials-link" href="#">
+                      <svg class="socials-icon instagram">
+                        <use
+                          href="./images/symbol-defs-sprite.svg#icon-instagram"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="socials-item">
+                    <a class="socials-link" href="#">
+                      <svg class="socials-icon instagram">
+                        <use
+                          href="./images/symbol-defs-sprite.svg#icon-twitter"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="socials-item">
+                    <a class="socials-link" href="#">
+                      <svg class="socials-icon instagram">
+                        <use
+                          href="./images/symbol-defs-sprite.svg#icon-facebook"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="socials-item">
+                    <a class="socials-link" href="#">
+                      <svg class="socials-icon instagram">
+                        <use
+                          href="./images/symbol-defs-sprite.svg#icon-linkedin"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
+              </div>
             </li>
           </ul>
         </div>
+      </section>
+
+      <!--клієнти-->
+
+      <section class="clients">
+        <h2 class="clients-title">Постійні клієнти</h2>
+        <ul class="clients-box">
+          <li class="clients-meta">
+            <a class="clients-link" href="#"
+              ><svg class="clients-icon">
+                <use
+                  href="./images/symbol-defs-sprite.svg#icon-Logo"
+                ></use></svg
+            ></a>
+          </li>
+          <li class="clients-meta">
+            <a class="clients-link" href="#"
+              ><svg class="clients-icon">
+                <use
+                  href="./images/symbol-defs-sprite.svg#icon-Logo-1"
+                ></use></svg
+            ></a>
+          </li>
+          <li class="clients-meta">
+            <a class="clients-link" href="#"
+              ><svg class="clients-icon">
+                <use
+                  href="./images/symbol-defs-sprite.svg#icon-Logo-2"
+                ></use></svg
+            ></a>
+          </li>
+          <li class="clients-meta">
+            <a class="clients-link" href="#"
+              ><svg class="clients-icon">
+                <use
+                  href="./images/symbol-defs-sprite.svg#icon-Logo-3"
+                ></use></svg
+            ></a>
+          </li>
+          <li class="clients-meta">
+            <a class="clients-link" href="#"
+              ><svg class="clients-icon">
+                <use
+                  href="./images/symbol-defs-sprite.svg#icon-Logo-4"
+                ></use></svg
+            ></a>
+          </li>
+          <li class="clients-meta">
+            <a class="clients-link" href="#"
+              ><svg class="clients-icon">
+                <use
+                  href="./images/symbol-defs-sprite.svg#icon-Logo-5"
+                ></use></svg
+            ></a>
+          </li>
+        </ul>
       </section>
     </main>
 
@@ -230,6 +452,41 @@
             </li>
           </ul>
         </address>
+      </div>
+      <div>
+        <h2 class="socials-title">приєднуйтесь</h2>
+        <ul class="socials-footer">
+          <li class="socials-footer-box">
+            <a class="footer-link" href="#">
+              <svg class="icon-footer instagram">
+                <use
+                  href="./images/symbol-defs-sprite.svg#icon-instagram"
+                ></use>
+              </svg>
+            </a>
+          </li>
+          <li class="socials-footer-box">
+            <a class="footer-link" href="#">
+              <svg class="icon-footer twitter">
+                <use href="./images/symbol-defs-sprite.svg#icon-twitter"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="socials-footer-box">
+            <a class="footer-link" href="#">
+              <svg class="icon-footer facebook">
+                <use href="./images/symbol-defs-sprite.svg#icon-facebook"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="socials-footer-box">
+            <a class="footer-link" href="#">
+              <svg class="icon-footer linkedin">
+                <use href="./images/symbol-defs-sprite.svg#icon-linkedin"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
       </div>
     </footer>
   </body>
