--- a/index.html
+++ b/index.html
@@ -71,9 +71,13 @@
         <div class="container subtitle">
           <ul class="category">
             <li class="item">
-              <svg class="item-icon">
-                <use href="./images/symbol-defs-sprite.svg#icon-antenna"></use>
-              </svg>
+              <div class="section-item-box">
+                <svg class="item-icon">
+                  <use
+                    href="./images/symbol-defs-sprite.svg#icon-antenna"
+                  ></use>
+                </svg>
+              </div>
               <h3 class="section-title">увага до деталей</h3>
               <p class="text">
                 Ідейні міркування, і навіть початок повсякденної роботи з
