--- a/index.html
+++ b/index.html
@@ -163,41 +163,54 @@
               />
               <h3 class="hero-name">Ігор Дем'яненко</h3>
               <p class="hero-text">Product Designer</p>
-              <div class="socials">
-                <ul class="socials-box">
+              <div>
+                <ul class="socials">
                   <li class="socials-item">
                     <a class="socials-link" href="#">
-                      <svg class="socials-icon instagram">
+                      <svg
+                        class="socials-icon instagram"
+                        width="20"
+                        height="20"
+                      >
                         <use
                           href="./images/symbol-defs-sprite.svg#icon-instagram"
                         ></use>
                       </svg>
                     </a>
                   </li>
-
                   <li class="socials-item">
                     <a class="socials-link" href="#">
-                      <svg class="socials-icon instagram">
+                      <svg
+                        class="socials-icon instagram"
+                        width="20"
+                        height="20"
+                      >
                         <use
                           href="./images/symbol-defs-sprite.svg#icon-twitter"
                         ></use>
                       </svg>
                     </a>
                   </li>
-
                   <li class="socials-item">
                     <a class="socials-link" href="#">
-                      <svg class="socials-icon instagram">
+                      <svg
+                        class="socials-icon instagram"
+                        width="20"
+                        height="20"
+                      >
                         <use
                           href="./images/symbol-defs-sprite.svg#icon-facebook"
                         ></use>
                       </svg>
                     </a>
                   </li>
-
                   <li class="socials-item">
                     <a class="socials-link" href="#">
-                      <svg class="socials-icon instagram">
+                      <svg
+                        class="socials-icon instagram"
+                        width="20"
+                        height="20"
+                      >
                         <use
                           href="./images/symbol-defs-sprite.svg#icon-linkedin"
                         ></use>
@@ -222,7 +235,11 @@
                 <ul class="socials">
                   <li class="socials-item">
                     <a class="socials-link" href="#">
-                      <svg class="socials-icon instagram">
+                      <svg
+                        class="socials-icon instagram"
+                        width="20"
+                        height="20"
+                      >
                         <use
                           href="./images/symbol-defs-sprite.svg#icon-instagram"
                         ></use>
@@ -231,7 +248,11 @@
                   </li>
                   <li class="socials-item">
                     <a class="socials-link" href="#">
-                      <svg class="socials-icon instagram">
+                      <svg
+                        class="socials-icon instagram"
+                        width="20"
+                        height="20"
+                      >
                         <use
                           href="./images/symbol-defs-sprite.svg#icon-twitter"
                         ></use>
@@ -240,7 +261,11 @@
                   </li>
                   <li class="socials-item">
                     <a class="socials-link" href="#">
-                      <svg class="socials-icon instagram">
+                      <svg
+                        class="socials-icon instagram"
+                        width="20"
+                        height="20"
+                      >
                         <use
                           href="./images/symbol-defs-sprite.svg#icon-facebook"
                         ></use>
@@ -249,7 +274,11 @@
                   </li>
                   <li class="socials-item">
                     <a class="socials-link" href="#">
-                      <svg class="socials-icon instagram">
+                      <svg
+                        class="socials-icon instagram"
+                        width="20"
+                        height="20"
+                      >
                         <use
                           href="./images/symbol-defs-sprite.svg#icon-linkedin"
                         ></use>
@@ -274,7 +303,11 @@
                 <ul class="socials">
                   <li class="socials-item">
                     <a class="socials-link" href="#">
-                      <svg class="socials-icon instagram">
+                      <svg
+                        class="socials-icon instagram"
+                        width="20"
+                        height="20"
+                      >
                         <use
                           href="./images/symbol-defs-sprite.svg#icon-instagram"
                         ></use>
@@ -283,7 +316,11 @@
                   </li>
                   <li class="socials-item">
                     <a class="socials-link" href="#">
-                      <svg class="socials-icon instagram">
+                      <svg
+                        class="socials-icon instagram"
+                        width="20"
+                        height="20"
+                      >
                         <use
                           href="./images/symbol-defs-sprite.svg#icon-twitter"
                         ></use>
@@ -292,7 +329,11 @@
                   </li>
                   <li class="socials-item">
                     <a class="socials-link" href="#">
-                      <svg class="socials-icon instagram">
+                      <svg
+                        class="socials-icon instagram"
+                        width="20"
+                        height="20"
+                      >
                         <use
                           href="./images/symbol-defs-sprite.svg#icon-facebook"
                         ></use>
@@ -301,7 +342,11 @@
                   </li>
                   <li class="socials-item">
                     <a class="socials-link" href="#">
-                      <svg class="socials-icon instagram">
+                      <svg
+                        class="socials-icon instagram"
+                        width="20"
+                        height="20"
+                      >
                         <use
                           href="./images/symbol-defs-sprite.svg#icon-linkedin"
                         ></use>
@@ -326,7 +371,11 @@
                 <ul class="socials">
                   <li class="socials-item">
                     <a class="socials-link" href="#">
-                      <svg class="socials-icon instagram">
+                      <svg
+                        class="socials-icon instagram"
+                        width="20"
+                        height="20"
+                      >
                         <use
                           href="./images/symbol-defs-sprite.svg#icon-instagram"
                         ></use>
@@ -335,7 +384,11 @@
                   </li>
                   <li class="socials-item">
                     <a class="socials-link" href="#">
-                      <svg class="socials-icon instagram">
+                      <svg
+                        class="socials-icon instagram"
+                        width="20"
+                        height="20"
+                      >
                         <use
                           href="./images/symbol-defs-sprite.svg#icon-twitter"
                         ></use>
@@ -344,7 +397,11 @@
                   </li>
                   <li class="socials-item">
                     <a class="socials-link" href="#">
-                      <svg class="socials-icon instagram">
+                      <svg
+                        class="socials-icon instagram"
+                        width="20"
+                        height="20"
+                      >
                         <use
                           href="./images/symbol-defs-sprite.svg#icon-facebook"
                         ></use>
@@ -353,7 +410,11 @@
                   </li>
                   <li class="socials-item">
                     <a class="socials-link" href="#">
-                      <svg class="socials-icon instagram">
+                      <svg
+                        class="socials-icon instagram"
+                        width="20"
+                        height="20"
+                      >
                         <use
                           href="./images/symbol-defs-sprite.svg#icon-linkedin"
                         ></use>
