--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
           <ul class="category">
             <li class="item">
               <div class="section-item-box">
-                <svg class="item-icon" width="70px" height="70px">
+                <svg class="item-icon" width="70" height="70">
                   <use
                     href="./images/symbol-defs-sprite.svg#icon-antenna"
                   ></use>
