--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           <li class="item">
             <a class="site-link" href="mailto:info@devstudio.com"
               ><svg class="header-contacts-icon" width="16" height="12">
-                <use href="./images/symbol-defs-sprite.svg#icon-email"></use>
+                <use href="./images/"></use>
               </svg>
               info@devstudio.com</a
             >
