--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           <li class="item">
             <a class="site-link" href="mailto:info@devstudio.com"
               ><svg class="header-contacts-icon" width="16" height="12">
-                <use href="./images/"></use>
+                <use href="./sprite.svg#icon-email"></use>
               </svg>
               info@devstudio.com</a
             >
@@ -52,7 +52,7 @@
           <li class="item">
             <a class="site-link" href="tel:+380961111111"
               ><svg class="header-contacts-icon" width="10" height="16">
-                <use href="./images/symbol-defs-sprite.svg#icon-tel"></use></svg
+                <use href="./sprite.svg#icon-tel"></use></svg
               >+38 096 111 11 11</a
             >
           </li>
@@ -80,9 +80,7 @@
             <li class="item">
               <div class="section-item-box">
                 <svg class="item-icon" width="70" height="70">
-                  <use
-                    href="./images/symbol-defs-sprite.svg#icon-antenna"
-                  ></use>
+                  <use href="./sprite.svg#icon-antenna"></use>
                 </svg>
               </div>
               <h3 class="section-title">увага до деталей</h3>
@@ -93,6 +91,11 @@
             </li>
 
             <li class="item">
+              <div class="section-item-box">
+                <svg class="item-icon" width="70" height="70">
+                  <use href="./sprite.svg#icon-clock"></use>
+                </svg>
+              </div>
               <h3 class="section-title">пунктуальність</h3>
               <p class="text">
                 Завдання організації, особливо рамки і місце навчання кадрів
@@ -101,6 +104,11 @@
             </li>
 
             <li class="item">
+              <div class="section-item-box">
+                <svg class="item-icon" width="70" height="70">
+                  <use href="./sprite.svg#icon-diagram"></use>
+                </svg>
+              </div>
               <h3 class="section-title">планування</h3>
               <p class="text">
                 Так само консультація з широким активом значною мірою зумовлює.
@@ -108,6 +116,11 @@
             </li>
 
             <li class="item">
+              <div class="section-item-box">
+                <svg class="item-icon" width="70" height="70">
+                  <use href="./sprite.svg#icon-astronaut"></use>
+                </svg>
+              </div>
               <h3 class="section-title">сучасні технології</h3>
               <p class="text">
                 Значимість цих проблем настільки очевидна, що реалізація
@@ -179,9 +192,7 @@
                         width="20"
                         height="20"
                       >
-                        <use
-                          href="./images/symbol-defs-sprite.svg#icon-instagram"
-                        ></use>
+                        <use href="./sprite.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
@@ -192,9 +203,7 @@
                         width="20"
                         height="20"
                       >
-                        <use
-                          href="./images/symbol-defs-sprite.svg#icon-twitter"
-                        ></use>
+                        <use href="./sprite.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
@@ -205,9 +214,7 @@
                         width="20"
                         height="20"
                       >
-                        <use
-                          href="./images/symbol-defs-sprite.svg#icon-facebook"
-                        ></use>
+                        <use href="./sprite.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
@@ -218,9 +225,7 @@
                         width="20"
                         height="20"
                       >
-                        <use
-                          href="./images/symbol-defs-sprite.svg#icon-linkedin"
-                        ></use>
+                        <use href="./sprite.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -247,9 +252,7 @@
                         width="20"
                         height="20"
                       >
-                        <use
-                          href="./images/symbol-defs-sprite.svg#icon-instagram"
-                        ></use>
+                        <use href="./sprite.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
@@ -260,9 +263,7 @@
                         width="20"
                         height="20"
                       >
-                        <use
-                          href="./images/symbol-defs-sprite.svg#icon-twitter"
-                        ></use>
+                        <use href="./sprite.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
@@ -273,9 +274,7 @@
                         width="20"
                         height="20"
                       >
-                        <use
-                          href="./images/symbol-defs-sprite.svg#icon-facebook"
-                        ></use>
+                        <use href="./sprite.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
@@ -286,9 +285,7 @@
                         width="20"
                         height="20"
                       >
-                        <use
-                          href="./images/symbol-defs-sprite.svg#icon-linkedin"
-                        ></use>
+                        <use href="./sprite.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -315,9 +312,7 @@
                         width="20"
                         height="20"
                       >
-                        <use
-                          href="./images/symbol-defs-sprite.svg#icon-instagram"
-                        ></use>
+                        <use href="./sprite.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
@@ -328,9 +323,7 @@
                         width="20"
                         height="20"
                       >
-                        <use
-                          href="./images/symbol-defs-sprite.svg#icon-twitter"
-                        ></use>
+                        <use href="./sprite.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
@@ -341,9 +334,7 @@
                         width="20"
                         height="20"
                       >
-                        <use
-                          href="./images/symbol-defs-sprite.svg#icon-facebook"
-                        ></use>
+                        <use href="./sprite.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
@@ -354,9 +345,7 @@
                         width="20"
                         height="20"
                       >
-                        <use
-                          href="./images/symbol-defs-sprite.svg#icon-linkedin"
-                        ></use>
+                        <use href="./sprite.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -383,9 +372,7 @@
                         width="20"
                         height="20"
                       >
-                        <use
-                          href="./images/symbol-defs-sprite.svg#icon-instagram"
-                        ></use>
+                        <use href="./sprite.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
@@ -396,9 +383,7 @@
                         width="20"
                         height="20"
                       >
-                        <use
-                          href="./images/symbol-defs-sprite.svg#icon-twitter"
-                        ></use>
+                        <use href="./sprite.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
@@ -409,9 +394,7 @@
                         width="20"
                         height="20"
                       >
-                        <use
-                          href="./images/symbol-defs-sprite.svg#icon-facebook"
-                        ></use>
+                        <use href="./sprite.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
@@ -422,9 +405,7 @@
                         width="20"
                         height="20"
                       >
-                        <use
-                          href="./images/symbol-defs-sprite.svg#icon-linkedin"
-                        ></use>
+                        <use href="./sprite.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -442,50 +423,38 @@
         <ul class="clients-box">
           <li class="clients-meta">
             <a class="clients-link" href="#"
-              ><svg class="clients-icon">
-                <use
-                  href="./images/symbol-defs-sprite.svg#icon-Logo"
-                ></use></svg
+              ><svg class="clients-icon" width="106px" height="60px">
+                <use href="./sprite.svg#icon-Logo"></use></svg
             ></a>
           </li>
           <li class="clients-meta">
             <a class="clients-link" href="#"
-              ><svg class="clients-icon">
-                <use
-                  href="./images/symbol-defs-sprite.svg#icon-Logo-1"
-                ></use></svg
+              ><svg class="clients-icon" width="106px" height="60px">
+                <use href="./sprite.svg#icon-Logo-1"></use></svg
             ></a>
           </li>
           <li class="clients-meta">
             <a class="clients-link" href="#"
-              ><svg class="clients-icon">
-                <use
-                  href="./images/symbol-defs-sprite.svg#icon-Logo-2"
-                ></use></svg
+              ><svg class="clients-icon" width="106px" height="60px">
+                <use href="./sprite.svg#icon-Logo-2"></use></svg
             ></a>
           </li>
           <li class="clients-meta">
             <a class="clients-link" href="#"
-              ><svg class="clients-icon">
-                <use
-                  href="./images/symbol-defs-sprite.svg#icon-Logo-3"
-                ></use></svg
+              ><svg class="clients-icon" width="106px" height="60px">
+                <use href="./sprite.svg#icon-Logo-3"></use></svg
             ></a>
           </li>
           <li class="clients-meta">
             <a class="clients-link" href="#"
-              ><svg class="clients-icon">
-                <use
-                  href="./images/symbol-defs-sprite.svg#icon-Logo-4"
-                ></use></svg
+              ><svg class="clients-icon" width="106px" height="60px">
+                <use href="./sprite.svg#icon-Logo-4"></use></svg
             ></a>
           </li>
           <li class="clients-meta">
             <a class="clients-link" href="#"
-              ><svg class="clients-icon">
-                <use
-                  href="./images/symbol-defs-sprite.svg#icon-Logo-5"
-                ></use></svg
+              ><svg class="clients-icon" width="106px" height="60px">
+                <use href="./sprite.svg#icon-Logo-5"></use></svg
             ></a>
           </li>
         </ul>
@@ -528,41 +497,33 @@
         </div>
 
         <div class="footer-box">
-          <h2 class="socials-title">приєднуйтесь</h2>
+          <p class="socials-title">приєднуйтесь</p>
           <ul class="socials-footer">
             <li class="socials-footer-box">
               <a class="footer-link" href="#">
                 <svg class="icon-footer instagram">
-                  <use
-                    href="./images/symbol-defs-sprite.svg#icon-instagram"
-                  ></use>
+                  <use href="./sprite.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="socials-footer-box">
               <a class="footer-link" href="#">
                 <svg class="icon-footer twitter">
-                  <use
-                    href="./images/symbol-defs-sprite.svg#icon-twitter"
-                  ></use>
+                  <use href="./sprite.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="socials-footer-box">
               <a class="footer-link" href="#">
                 <svg class="icon-footer facebook">
-                  <use
-                    href="./images/symbol-defs-sprite.svg#icon-facebook"
-                  ></use>
+                  <use href="./sprite.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="socials-footer-box">
               <a class="footer-link" href="#">
                 <svg class="icon-footer linkedin">
-                  <use
-                    href="./images/symbol-defs-sprite.svg#icon-linkedin"
-                  ></use>
+                  <use href="./sprite.svg#icon-linkedin"></use>
                 </svg>
               </a>
             </li>
